[project]
name = "jasentool"
dynamic = ["version"]
authors = [
  {name = "Ryan Kennedy", email = "Ryan.Kennedy@skane.se"},
]
description = "Multipurpose tool for jobs related to the jasen pipeline and Bonsai tool."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "setuptools",
    "wheel",
    "requests",
    "tqdm",
    "pandas",
    "pymongo~=4.16",
    "openpyxl",
    "biopython",
    "matplotlib",
    "seaborn",
    "click>=8.1",
    "pysam>=0.22",
    "numpy>=1.24",
    "rauth",
]

[project.urls]
Repository = "https://github.com/ryanjameskennedy/jasentool"
Issues = "https://github.com/ryanjameskennedy/jasentool/issues"
Changelog = "https://github.com/ryanjameskennedy/jasentool/CHANGELOG.md"
Documentation = "https://jasentool.readthedocs.io"

[project.scripts]
jasentool = "jasentool.__main__:main"

[project.optional-dependencies]
dev = [
    "pylint~=4.0",
    "black~=26.3",
    "isort~=8.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
]

[tool.setuptools]
packages = ["jasentool"]
include-package-data = true

[tool.setuptools.data-files]
"notebooks" = ["notebooks/*.ipynb"]

[tool.setuptools.dynamic]
version = {attr = "jasentool.__version__"}

[tool.pylint.main]
extension-pkg-allow-list = ["pysam"]

[tool.coverage.run]
source = ["jasentool"]
